--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -150,31 +150,21 @@ Current tasks:
         - So the bug probably still exists, but is difficult to reproduce for some reason.
 
     - Major tasks blocking release:
-        - Make sure falling in the Southwest corner of the sky takes the player to the forest zone.
-            - Use the old logic for falling from the overworld into the forest temple.
-        - Update entrance randomizer logic.
-            - Verify spiritForestGold is in logic in entrance randomizer.
-            - Make sure treeVillage -> forestTemple doors aren't considered entrances for entrance randomizer.
         - Adjust all save statue positions
             - Including the title scene.
         - Test forest
         - Test forest temple
         - Test randomizer
     - Minor tasks blocking release:
+        - Add secret behind sealed door in forest basement in the material world.
+        - Add broken glass wall decoration and use it in forest temple south hallway.
         - BLOCKED: Add jade door styles to fix the look of the money maze area in the holy city interior.
         - Render fog when transitioning from underwater to foggy area.
         - Fix knobby tree door is too wide letting player clip the left edge.
-        - Add more enemies to forest
-            - elemental plants in Spirit World
-        - Add secret behind sealed door in forest basement in the material world.
         - Add better dialog and NPCs to forest temple.
-        - Add broken glass wall decoration and use it in forest temple south hallway.
-        - Hide target object id editor fields when target zone is "none"
         - Draw fog effect instead of forest map when forest is foggy.
             - Would be nice to generalize this, but we want to make sure we handle the case of
                 looking at the forest map from underwater (which is not foggy), while the forest is still foggy.
-        - Allow specifying mapIcon on doors to indicate spirit forest trees go down.
-            - Render right arrows 2px left of normal position so they are on screen when near the right edge of the map.
 
 
     - Add pixel precision to water tiles:
@@ -186,6 +176,9 @@ Current tasks:
         - Current world is in front by default, but pressing left/right swaps which world is in front.
         - Or don't have them overlap, but include the mirror effect and have the map just scroll left and right to show both.
         - Could default the scroll so that the players position in both worlds is centered about the middle of the screen.
+
+    - Fix error when save game is loaded with player over a pit.
+        - Not high priority since this doesn't happen outside of debug situations and the error doesn't crash the game.
 
     - For staff animations to render all but the bottom Npx in the foreground.
     - Make Vanara bushes linked between worlds like other bushes.
