Finished adding moss to peach cave. Added broken glass decorations to Forest Temple.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -155,15 +155,15 @@ Current tasks:
         - Test forest
         - Test forest temple
         - Test randomizer
+        - Repack images.
     - Minor tasks blocking release:
-        - Add broken glass wall decoration and use it in forest temple south hallway.
-        - BLOCKED: Add jade door styles to fix the look of the money maze area in the holy city interior.
         - Render fog when transitioning from underwater to foggy area.
         - Fix knobby tree door is too wide letting player clip the left edge.
         - Add better dialog and NPCs to forest temple.
         - Draw fog effect instead of forest map when forest is foggy.
             - Would be nice to generalize this, but we want to make sure we handle the case of
                 looking at the forest map from underwater (which is not foggy), while the forest is still foggy.
+        - BLOCKED: Add jade door styles to fix the look of the money maze area in the holy city interior.
 
 
     - Add pixel precision to water tiles:
@@ -182,7 +182,6 @@ Current tasks:
     - For staff animations to render all but the bottom Npx in the foreground.
     - Make Vanara bushes linked between worlds like other bushes.
 
-    - Add moss to Peach Cave
 
     - Add old save statue graphics as a decoration.
         - Possibly replace save status with these in the title scene.
