--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -24,6 +24,7 @@ Bugs:
         - Robot stopped moving in ST basement. Maybe ice damage against shield is broken?
         - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
             - Possibly fixed by other changes.
+        - Cannot enter Staff Tower from the spirit sky, though it appears open.
 
 Graphics Work:
     Categories of types of graphics work:
@@ -145,13 +146,15 @@ Graphics to Implement:
 
 
 Current tasks:
-    - Unable to enter Staff Tower in spirit Sky?
-        - This has not yet occurred on the most recent version.
-
     - Major tasks blocking release:
         - Repack images.
     - Minor tasks blocking release:
         - BLOCKED: Add jade door styles to fix the look of the money maze area in the holy city interior.
+
+    - Storm beast behavior seems wrong when defeating orbs ahead of the fight
+        - Seems to appear and disappear immediately sometime (even when not transitioning to rage phase)
+        - Appears to try to guard the terminal to the spirit world.
+    - Jade Champion doesn't seem to help during Storm Beast fight in randomizer.
 
     - Keep charging through rolls when wearing iron boots.
 
