Add new fireball animation.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -146,8 +146,6 @@ Graphics to Implement:
 
 
 Current tasks:
-    - BLOCKED: Add jade door styles to fix the look of the money maze area in the holy city interior.
-
     - Preload music.
 
     - Remove spirit energy debuff from burning, add "shocked" effect from lightning damage
@@ -208,13 +206,17 @@ Current tasks:
 
     - Add new graphics
         - Cherry tree
-        - fireball effect
         - dirt particles
         - test new lab tiles
         - new icons
             - peach basket
             - consumables
             - medallions
+
+    - Fix Vanara Guardian boss looks bad when moving behind foreground tiles
+        - Move more tiles to the background.
+        - Prevent the Guardian from going over as many wall tiles
+        - Draw the top 32-48px of the guardian in the foreground, similar to staff.
 
     - Add Vanara Dreamland
         - Add Spirit world entrances: Sky City Arcade, Jade City Arcade
