Improve remaining Cocoon Boss behaviors.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -148,28 +148,12 @@ Graphics to Implement:
 Current tasks:
     - Preload music.
 
-    - Cocoon boss improvements
-        - Improve basic attack set
-            - Make attacks ignore walls, but hit player, apply ground effects and knock balls around
-        - Fix projectile ring should add/remove ice as expected.
-        - Allow boss to hit and move rolling balls with some attacks.
-            - Track source of ball hit on the ball, and apply it to damge from the ball.
-            - If the boss hits the ball into itself(check source is projection), add special dialog
-                "How embarrassing!"
-                "You got lucky!"
-                "I hit myself?!"
-        - Add large blast to start of enrage phase (when sending clones out)?
-        - Add a final pinch phase where the astral projection becomes undamagable and uses slow targeted attacks that impede
-          the player's ability to interact with the puzzle elements.
-            "I won't lose this easily!"
-            Taunts change
-            "My Spirit Energy is limitless"
-            When teleporting: "There is no escaping me!"
-            - Player will want to lure the projection away from the boss and complete the puzzle during its attacks.
-            - This occurs when the boss reaches 2 health and cancels any burning damage.
-
     - Remove spirit energy debuff from burning, add "shocked" effect from lightning damage
         - Delays spirit energy generation for 1s
+
+    - Add a dissipating spark effect when a circular spark is removed.
+        - This will make large sparks disappearing on hit/TTL/cleanup be less jarring with no mechanical impact (the effect isn't interactive).
+        - Just a shrinking spark effect.
 
     - Cocoon improvements
         - Add additional gauntlet gauntlet floor before the boss
@@ -196,6 +180,21 @@ Current tasks:
 
     - Need better enemy for Cocoon B3 rolling ball puzzle.
 
+    - Cocoon boss improvements
+        - Allow boss to hit and move rolling balls with some attacks.
+            - Track source of ball hit on the ball, and apply it to damge from the ball.
+            - If the boss hits the ball into itself(check source is projection), add special dialog
+                "How embarrassing!"
+                "You got lucky!"
+                "I hit myself?!"
+        - Add a final pinch phase where the astral projection becomes undamagable and uses slow targeted attacks that impede
+          the player's ability to interact with the puzzle elements.
+            "I won't lose this easily!"
+            Taunts change
+            "My Spirit Energy is limitless"
+            When teleporting: "There is no escaping me!"
+            - Player will want to lure the projection away from the boss and complete the puzzle during its attacks.
+            - This occurs when the boss reaches 2 health and cancels any burning damage.
 
     - Hard mode recommendations:
         - No free revives/jade from statues.
